# azure-updates-agent

./: .gitignore  README.md  VISION.md  pyproject.toml
config/: watchlist.yaml
scripts/: debug_filter.py  explore_mcp.py
src/azure_updates_agent/: main.py  mcp_client.py  models.py  report.py  state.py  watchlist.py
src/azure_updates_agent/templates/: report.md.j2
tests/fixtures/: raw_azure_updates.json
